syntax = "proto3";
package google.gink;
import "muid.proto";
import "value.proto";
import "value_type.proto";
import "behavior.proto";
import "column.proto";

/**
    Each new Container message establishes the existance of a mutable data structure.
    Those containers can have their contents changed with Entry messages,
    but the type ("behavior") of each Container cannot be changed.
*/

message Container {
    Behavior behavior = 1;
    repeated Muid extends = 2; // inheritance (an option for TABLE, QUEUE, SET, SCHEMA, LABEL)
    ValueType key_type = 3; // optional when behavior in (SCHEMA, SET)
    ValueType value_type = 4; // optional when behavior in (BOX, SCHEMA, QUEUE, PROPERTY)
    repeated Column columns = 5; // use when behavior is TABLE
    repeated Value primary_key_expressions = 8; // use when behavior is TABLE
}
